add readme and about page

--- a/history.html
+++ b/history.html
@@ -16,6 +16,9 @@
     <a href="/history.html">
       <button class="nav-button history">📊 History</button>
     </a>
+    <a href="/about.html">
+        <button class="nav-button about">📄 About</button>
+    </a>
   </div>
 
   <!-- Session History Table -->
