--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <a href="/history.html">
       <button class="nav-button history">📊 History</button>
     </a>
+    <a href="/about.html">
+      <button class="nav-button about">📄 About</button>
+  </a>
   </div>
   <video id="video" width="720" height="560" autoplay muted></video>
   <div id="focus-stats"></div>
